# db-viewer

./: .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  GlobalStyles.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/common/: application_state.rs
src-tauri/src/mssql/: add_connection.rs  mod.rs  run_query.rs
src/@types/: styled.d.ts
src/ConnectionSettingsForm/: ConnectionSettingsForm.css  ConnectionSettingsForm.tsx  index.ts
src/MonacoEditor/: MonacoEditor.css  MonacoEditor.tsx  index.ts
src/ResultsView/: ResultsView.tsx
src/ToolBar/: ToolBar.css  ToolBar.tsx
src/components/: AddConnectionModal.tsx  ColorGrid.tsx  ConnectionSettingsForm.tsx  Connections.tsx  DefaultView.tsx  MSSQLTabContent.tsx  MonacoEditor.tsx  RecentConnections.tsx  ResultsView.tsx  ToolBar.tsx
src/components/app/theming/: Theme.ts  ThemeProvider.tsx  utils.ts
src/components/app/theming/themes/: catppuccin-frappe.ts  catppuccin-latte.ts  catppuccin-macchiato.ts  catppuccin-mocha.ts
src/components/core_ui/: Modal.tsx  Tabs.tsx
src/types/: AddConnectionDataModel.ts  QueryResult.ts
